[gd_scene load_steps=5 format=3 uid="uid://mil6hi586vw6"]

[ext_resource type="Script" uid="uid://bg3kdl54nciwb" path="res://scripts/items/item_slot.gd" id="1_obwa2"]
[ext_resource type="Texture2D" uid="uid://041hbymq81oy" path="res://assets/textures/ui/stats_icons.png" id="1_uw4km"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_obwa2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_obwa2"]
atlas = ExtResource("1_uw4km")
region = Rect2(0, 0, 18, 18)

[node name="ItemSlot" type="PanelContainer"]
custom_minimum_size = Vector2(50, 50)
offset_right = 59.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_obwa2")
script = ExtResource("1_obwa2")

[node name="SlotBackgroundDisplay" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("AtlasTexture_obwa2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemDisplay" type="NinePatchRect" parent="MarginContainer"]
layout_mode = 2

[node name="SlotCount" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Highlight" type="ColorRect" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.39215687)
